[gd_scene load_steps=11 format=2]

[ext_resource path="res://fonts/BlackCastleMF.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://res/default_theme.tres" type="Theme" id=2]
[ext_resource path="res://title-screen.gd" type="Script" id=3]
[ext_resource path="res://hud/main-menu-bg.png" type="Texture" id=4]

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 1100, 618 )
modulate_color = Color( 0.0784314, 0.309804, 0.380392, 1 )

[sub_resource type="DynamicFont" id=10]
size = 84
outline_size = 3
outline_color = Color( 0.839216, 0.45098, 0.0470588, 0.752941 )
extra_spacing_char = 2
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0, 0, 0, 0.94902 )
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color( 0.878431, 0.509804, 0.0745098, 1 )
border_blend = true
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color( 0, 0, 0, 0.827451 )
shadow_size = 12
shadow_offset = Vector2( 5, 5 )

[sub_resource type="DynamicFont" id=11]
size = 25
extra_spacing_char = 2
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.843137, 0.4, 0.0784314, 0.168627 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.00392157, 0.0470588, 0.0784314, 1 )

[node name="main_menu" type="Node2D"]
script = ExtResource( 3 )

[node name="panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1024.0
margin_bottom = 600.0
theme = ExtResource( 2 )
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="new_btn" type="Button" parent="panel"]
anchor_left = 0.5
anchor_top = 0.396
anchor_right = 0.5
anchor_bottom = 0.396
margin_left = -137.5
margin_top = 32.0
margin_right = 137.5
margin_bottom = 94.0
text = "New Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="load_btn" type="Button" parent="panel"]
anchor_left = 0.5
anchor_top = 0.543
anchor_right = 0.5
anchor_bottom = 0.543
margin_left = -137.5
margin_top = 32.0
margin_right = 137.5
margin_bottom = 94.0
disabled = true
text = "Load Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" type="Label" parent="panel"]
anchor_left = 0.5
anchor_top = 0.2
anchor_right = 0.5
anchor_bottom = 0.2
margin_left = -381.0
margin_top = -61.0
margin_right = 381.0
margin_bottom = 55.0
grow_horizontal = 2
grow_vertical = 2
rect_pivot_offset = Vector2( -160, -65.5 )
custom_fonts/font = SubResource( 10 )
text = "Melkor's Oubliette"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title2" type="Label" parent="panel"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -289.0
margin_top = -39.0
margin_right = -9.0
margin_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 15
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 2
text = "(C) Ben Coleman, 2021"
align = 2
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="version" type="Label" parent="panel"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 12.0
margin_top = -27.0
margin_right = 292.0
margin_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
rect_scale = Vector2( 0.5, 0.5 )
size_flags_horizontal = 15
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 2
text = "v0.0.1"
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="start_popup" type="Popup" parent="."]
margin_right = 40.0
margin_bottom = 40.0
theme = ExtResource( 2 )
popup_exclusive = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="panel" type="Panel" parent="start_popup"]
margin_left = 239.0
margin_top = 154.0
margin_right = 785.0
margin_bottom = 545.0
custom_styles/panel = SubResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="back_btn" type="Button" parent="start_popup/panel"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 14.0
margin_top = -63.0
margin_right = 164.0
margin_bottom = -14.0
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="start_btn" type="Button" parent="start_popup/panel"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -164.0
margin_top = -62.0
margin_right = -14.0
margin_bottom = -13.0
disabled = true
text = "Begin..."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title2" type="Label" parent="start_popup/panel"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -529.0
margin_top = -372.0
margin_right = -17.0
margin_bottom = -341.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 15
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 2
custom_fonts/font = SubResource( 11 )
custom_styles/normal = SubResource( 7 )
text = " Main Game"
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="level_list" type="ItemList" parent="start_popup/panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -253.0
margin_top = -134.5
margin_right = 254.0
margin_bottom = -43.5
custom_colors/font_color = Color( 0.164706, 0.498039, 0.921569, 1 )
custom_styles/bg = SubResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title3" type="Label" parent="start_popup/panel"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -529.0
margin_top = -225.0
margin_right = -17.0
margin_bottom = -194.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 15
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 2
custom_fonts/font = SubResource( 11 )
custom_styles/normal = SubResource( 7 )
text = " Custom Levels"
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="level_list_custom" type="ItemList" parent="start_popup/panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -253.0
margin_top = 11.0
margin_right = 254.0
margin_bottom = 118.0
custom_colors/font_color = Color( 0.164706, 0.498039, 0.921569, 1 )
custom_styles/bg = SubResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="panel/new_btn" to="." method="_on_new_btn_pressed"]
[connection signal="pressed" from="start_popup/panel/back_btn" to="." method="_on_back_btn_pressed"]
[connection signal="pressed" from="start_popup/panel/start_btn" to="." method="_on_start_btn_pressed"]
[connection signal="item_selected" from="start_popup/panel/level_list" to="." method="_on_level_list_item_selected"]
[connection signal="item_selected" from="start_popup/panel/level_list_custom" to="." method="_on_level_list_custom_item_selected"]
